@@ -4,6 +4,7 @@
 		- Fixed a number of preferences bugs on the main screen.
 		- Fixed E-Mail sigs not being added.
 		- Moved E-Mail preferences into its own section.
+		- When changing NNTP servers, now deletes newsgroups and users_newsgroups.
 
 [0.9.2] - Fixed sorting bug in currentusers.php
 		- Cleaned up error reporting and form in newaccount.php
